--- a/styles/contact.css
+++ b/styles/contact.css
@@ -258,6 +258,10 @@ main .contents .firstBox .heading .title02 {
   margin: -0.25em 0 0 0;
 }
 
+main .contents .firstBox .details {
+  width: 100%;
+}
+
 main .contents .firstBox .details form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -273,69 +277,71 @@ main .contents .firstBox .details form {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 0 0 2em 0;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactNameContainer {
-  width: 100%;
   padding: 0 0 2em 0;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactNameContainer .contactNameTitle {
-  width: 100%;
   font-family: "Vollkorn", serif;
   font-size: 26px;
   font-style: italic;
   font-weight: 700;
   color: #3D362C;
   padding: 0 0 0.5em 0;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactNameContainer .contactNameInput {
-  width: 100%;
   padding: 1em 0 1em 1em;
   border: solid 2px #550710;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactEmailContainer {
-  width: 100%;
   padding: 0 0 2em 0;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactEmailContainer .contactEmailTitle {
-  width: 100%;
   font-family: "Vollkorn", serif;
   font-size: 26px;
   font-style: italic;
   font-weight: 700;
   color: #3D362C;
   padding: 0 0 0.5em 0;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactEmailContainer .contactEmailInput {
-  width: 100%;
   padding: 1em 0 1em 1em;
   border: solid 2px #550710;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactTextContainer {
-  width: 100%;
   padding: 0 0 2em 0;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactTextContainer .contactTextTitle {
-  width: 100%;
   font-family: "Vollkorn", serif;
   font-size: 26px;
   font-style: italic;
   font-weight: 700;
   color: #3D362C;
   padding: 0 0 0.5em 0;
+  width: 100%;
 }
 
 main .contents .firstBox .details form .contactTextContainer .contactTextInput {
-  width: 100%;
   padding: 1em 0 1em 1em;
   border: solid 2px #550710;
+  width: 100%;
+  height: 8em;
 }
 
 main .contents .firstBox .details form .contactButtonContainer {
