--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -1113,6 +1113,30 @@ footer {
                         font-size: $desktopParagraph;
                     }
                 }
+
+                .buttonWrapper {
+
+                    .buttonContainer {
+                        
+                        button.buttonOne {
+                            width: 100%;
+                            height: 60px;
+                            border-radius: 2em;
+                            border: solid 2px;
+                            color: $darkRed;
+                            background-color: transparent;
+                            font-size: $desktopButtonText;
+                            cursor: pointer;
+                            transition: 0.25s all;
+                        }
+
+                        
+                        button.buttonOne:hover {
+                            background-color: $darkRed;
+                            color: $white;
+                        }
+                    }
+                }
             }
 
             .secondBox {
@@ -1427,6 +1451,29 @@ footer {
 
                         p {
                             font-size: $desktopParagraph;
+                        }
+                    }
+
+                    .buttonWrapper {
+
+                        .buttonContainer {
+                            
+                            button.buttonOne {
+                                width: 100%;
+                                height: 60px;
+                                border-radius: 2em;
+                                border: solid 2px;
+                                color: $darkRed;
+                                background-color: transparent;
+                                font-size: $desktopButtonText;
+                                cursor: pointer;
+                                transition: 0.25s all;
+                            }
+
+                            button.buttonOne:hover {
+                                background-color: $darkRed;
+                                color: $white;
+                            }
                         }
                     }
                 }
